_static/css/custom.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');
/* Define N8 theme colours (and lighter versions) */
:root {
  --n8-deep-blue-color: #054C91;
  --n8-burnt-orange-color: #F95423;
  --n8-burnt-orange-color-a11y: #D13505;
  --n8-burnt-orange-lightest-color: #FFF6F5; /* equivalent of burnt orange with alpha 0.05 */
  --n8-cool-grey-10-color: #63666A;
  --n8-cool-grey-6-color: #A7A8AA;
  --n8-cool-grey-5-color: #b1b3b3;
  --n8-cool-grey-4-color: #bbbcbc;
  --n8-cool-grey-3-color: #c8c9c7;
  --n8-cool-grey-2-color: #D0D0CE;
  --n8-cool-grey-2-lighter-color: #E1E1E0; /* equivalent of Cool grey 2 with alpha 0.5 */
  --n8-cool-grey-2-lightest-color: #F1F1F0; /* equivalent of Cool grey 2 with alpha 0.3 */
  --n8-light-theme-background-color: #f5f5f5;
  --n8-light-theme-text-color: #212529;
  --n8-light-theme-text-color-muted: #212529;
  --pygments-default-background-color: #f8f8f8;
}

/* -----------------------------------------
  Non-theme specific / universal css changes
  ------------------------------------------*/

html {
  --pst-sidebar-font-size: 1.0rem;
}

/* Change the font family to match the N8 CIR website */
body {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

/* Ensure announcement links are distinguishable from regular text */
.bd-header-announcement a {
  font-weight: bold;
  text-decoration: underline;
}

/* Reduce padding / increase content width from 768px and above when navigation is hidden */
@media (min-width: 768px) {
  input#__navigation:checked~.container-xl #main-content {
    padding-left: 0;
    padding-right: 0;
  }
}

/* Theming for customised Customise version of the search bar which includes a submission button for a11y*/
.custom-bd-search {
  padding: 1rem 15px 0 15px;
  margin-right: -15px;
  margin-left: -15px;
}
.custom-bd-search input,
.custom-bd-search .btn {
  border-radius: 0;
}
.custom-bd-search .btn-outline-secondary:hover {
  background-color: var(--pst-color-primary);
}

/* Increase the maximum width for large displays. Still limited to prevent very long line length */
@media (min-width:1200px) {
  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl {
    max-width:1600px
  }
}

/* Styling tweaks for ethical ads. */
.ethical-sidebar, .ethical-footer {
  border: 1px solid var(--n8-cool-grey-2-lighter-color);
  margin-bottom: 2.5rem;
}
/* Push down the ethical ads to the bottom of the sidebar, but above the version selector */
#site-navigation .bd-sidebar__top {
  min-height: calc(100% - 2em);
  display: flex;
  flex-direction: column;
}
#ethical-ads-container {
  margin-top:auto;
}

/* --------------------------------------
  Light theme specific formatting changes
  --------------------------------------- */
html[data-theme="light"] {
  --pst-color-background: var(--n8-light-background-color);
  --pst-color-text-base: var(--n8-light-theme-text-color);
  --pst-color-text-muted: var(--n8-light-theme-text-color-muted);
  --pst-color-primary: var(--n8-deep-blue-color);
  --pst-color-secondary: var(--n8-burnt-orange-color-a11y);
  --pst-color-accent: var(--n8-burnt-orange-color-a11y);
  --pst-color-inline-code: var(--n8-burnt-orange-color-a11y);
  --pst-color-link: var(--n8-deep-blue-color);
  --pst-color-preformatted-background: var(--pygments-default-background-color);
  --sbt-color-announcement: var(--n8-deep-blue-color);
}
/* Override the default sphinx book theme announcement colour */
html[data-theme="light"] .bd-header-announcement a {
  color: var(--n8-burnt-orange-color-lightest);
}
/* Set light theme colours for custom search form elements */
html[data-theme="light"] #site-navigation .form-control {
  background: var(--n8-light-background-color);
}
html[data-theme="light"] .custom-bd-search input,
html[data-theme="light"] .custom-bd-search .btn {
  border: 1px solid var(--n8-cool-grey-2-lighter-color);
}
/* Change the colour of headings to the N8 blue */
html[data-theme="light"] .bd-article-container h1,
html[data-theme="light"] .bd-article-container h2,
html[data-theme="light"] .bd-article-container h3,
html[data-theme="light"] .bd-article-container h4
html[data-theme="light"] .bd-article-container h5 {
  color: var(--n8-deep-blue-color);
}

/* -------------------------------------
  Dark theme specific formatting changes
  -------------------------------------- */
/* html[data-theme="dark"] {

} */

